GMM_Main/src/objects/Award_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>Total_number_of_Volunteers_serving_in_in__c</fullName>
        <label># of Vols. in In-Home Placements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_active_Military_members__c</fullName>
        <label># of Active Military Mbrs. Serving</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_active_Military_served__c</fullName>
        <label>Total number of active Military served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_mentored__c</fullName>
        <label>Total number of children mentored</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_of_National_Gua__c</fullName>
        <label>Children of Ntl. Guard Reservists Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_of_active_milit__c</fullName>
        <label>Children of Active Mil. Members Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_of_prisoners_se__c</fullName>
        <label>Children of Prisoners Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_youth_served__c</fullName>
        <label>Total number of children/youth served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_clients_served__c</fullName>
        <label>Total number of clients served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_disaster_services_V__c</fullName>
        <label>Total # of Disaster Services Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_disaster_services_statio__c</fullName>
        <label>Total # of Disaster Service Stations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_faith_based_Stations_V__c</fullName>
        <label>Total Number of Faith-Based Stations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_family_members_of_active__c</fullName>
        <label>Family Members of Active Mil. Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_hours_served_federally_f__c</fullName>
        <label># of Hours Served Federally Funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_hours_served_non_federal__c</fullName>
        <label># of Hours Served Non-Federally Funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_seniors_on_waiting_list__c</fullName>
        <label># of Seniors on Waiting List to be Vols.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_veterans_served__c</fullName>
        <label>Total number of veterans served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_volunteers_with_family_m__c</fullName>
        <label># Vols. with Fam. Mbrs. Actively Serving</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Volunteers_federally_funded__c</fullName>
        <label>Total # of Volunteers federally funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_faith_based_Volunteer__c</fullName>
        <label>Total Number of Faith-Based Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transportation_problems__c</fullName>
        <label>Transportation problems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unexpended_program_income__c</fullName>
        <formula>Total_federal_program_income_earned_no__c + Program_income_expended_in_accordance_wi__c  +  Program_income_expended_in_accordance_w__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unexpended program income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unobligated_Bal_Fed_Funds_This_Period__c</fullName>
        <description>bug #3453</description>
        <label>Unobligated Bal. Fed Funds – This Period</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unobligated_Bal_of_Fed_Funds_Previous__c</fullName>
        <description>bug #3453</description>
        <label>Unobligated Bal. of Fed Funds – Previous</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unobligated_balance_of_federal_funds__c</fullName>
        <formula>Total_Federal_Funds_authorized__c  -  Federal_Share_of_expenditures__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unobligated Bal. Fed Funds – Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unobligated_funds__c</fullName>
        <label>Unobligated funds</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_on_other_federal_activities__c</fullName>
        <inlineHelpText>Does the grantee request the use of the equipment on other federally supported activities?</inlineHelpText>
        <label>Use on other federal activities?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Veterans_Military_Families_of_clients__c</fullName>
        <label>Receiving Veteran/Military Family Svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veterans_family_members_of_clients__c</fullName>
        <label>Vets’ Fam Mbrs that Received Assistance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veterans_family_members_that_received_a__c</fullName>
        <label>Veterans’ family members that received a</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veterans_of_clients__c</fullName>
        <label>Veterans that received assistance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veterans_that_received_assistance__c</fullName>
        <label>Veterans that received assistance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vets_military_fam_mbrs_providing_service__c</fullName>
        <inlineHelpText>Number of veterans &amp; military family members engaged in providing services</inlineHelpText>
        <label># of Vet/mil fam mbrs providing services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visually_Impaired_IN__c</fullName>
        <label>Visually Impaired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visually_Impaired_NIH__c</fullName>
        <label>Visually Impaired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visually_Impaired_V__c</fullName>
        <formula>Visually_Impaired_IN__c  +  Visually_Impaired_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visually Impaired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visually_Impaired__c</fullName>
        <label>Visually Impaired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteers_Separated__c</fullName>
        <label>Volunteers Separated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>White__c</fullName>
        <label>White</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Withdraw_Justification__c</fullName>
        <label>Rework Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Recipient_Access_Identifying__c</fullName>
        <label>Your Recipient Access/Identifying #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip1__c</fullName>
        <description>DDP</description>
        <formula>Award__r.Application_ID__r.Project__r.Organization__r.Zip1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city1__c</fullName>
        <description>DDP</description>
        <formula>Award__r.Application_ID__r.Project__r.Organization__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>city1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>no_of_volunteers__c</fullName>
        <label># of Volunteers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_Federal_Funds_matched_to_date__c</fullName>
        <description>As per #870</description>
        <formula>Recipient_share_of_exp_Cumulative__c  / ( Recipient_share_of_exp_Cumulative__c  +  Federal_Share_of_expenditures_C__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Federal Funds matched to date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Disaste__c</fullName>
        <label>add&apos;l activities comp– Disaster svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Econom__c</fullName>
        <label>add’l activities comp– Economic Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Edu__c</fullName>
        <label>add’l activities comp– Edu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Enviro__c</fullName>
        <label>add&apos;l activities comp–Enviro Stewardship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Health__c</fullName>
        <label>add’l activities comp– Healthy Futures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Vetera__c</fullName>
        <label>add’l activities comp– Vet &amp; Mil Fams</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Disaster_Servi__c</fullName>
        <label>add&apos;l svcs offered - Disaster Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Economic_Opp__c</fullName>
        <label>add’l svcs offered– Economic Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Edu__c</fullName>
        <label>add’l svcs offered– Edu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Enviro_Steward__c</fullName>
        <label>add’l svcs offered– Enviro Stewardship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Healthy_Future__c</fullName>
        <label>add’l svcs offered– Healthy Futures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Vets_Militar__c</fullName>
        <label>add’l svcs offered– Vet &amp; Military Fams</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_federal_funds_unobligated_Federal__c</fullName>
        <label>Federal - % Federal Funds Unobligated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_federal_funds_unobligated__c</fullName>
        <label>% of federal funds unobligated:Recipient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_funds_expended_to_date_Federal__c</fullName>
        <label>Federal - % Funds Expended to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_funds_expended_to_date__c</fullName>
        <label>Recipient - % Funds Expended to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_match_required__c</fullName>
        <formula>(Total_Recipient_share_required__c  / ( Total_Recipient_share_required__c +  Total_Federal_Funds_authorized__c ))*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of match</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_share_of_total_expenditures__c</fullName>
        <label>Recipient - % Share of Total Expenditure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_share_of_total_expenditures_federal__c</fullName>
        <label>Federal - % Share of Total Expenditure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>states__c</fullName>
        <description>DDP</description>
        <formula>Text(Award__r.Application_ID__r.Project__r.Organization__r.States__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>states</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trained_by_capacity_building_scvs__c</fullName>
        <inlineHelpText># of staff &amp; volunteers trained as a result of capacity-building scvs</inlineHelpText>
        <label># trained by capacity-building svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Award Reporting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Award__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Org_legal_name__c</columns>
        <columns>Grant__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Award__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Org_legal_name__c</columns>
        <columns>Grant__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award_Reporting__c.Progress_Reports</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Progress Report</label>
    </listViews>
    <listViews>
        <fullName>FFR</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Award__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Organization_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award_Reporting__c.Federal_Financial_Reports</value>
        </filters>
        <filters>
            <field>Organization_Name__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <label>FFR</label>
    </listViews>
    <listViews>
        <fullName>FGP_FGPE_Progress_Report_Supplement</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Grant_num__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Reporting_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award_Reporting__c.FGP_FGPF_Progress_Report_Supplement</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award_Reporting__c.RSVP_Progress_Report_Supplement</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award_Reporting__c.Senior_Corps_Progress_Report_Supplements</value>
        </filters>
        <label>Test Suite 3173</label>
    </listViews>
    <listViews>
        <fullName>My_Award_Reports</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Reporting_Start_Date__c</columns>
        <columns>Reporting_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Award Reports</label>
    </listViews>
    <listViews>
        <fullName>Returned_for_Rework</fullName>
        <columns>NAME</columns>
        <columns>Award__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Returned for Re-work</value>
        </filters>
        <label>Returned for Rework</label>
    </listViews>
    <listViews>
        <fullName>Senior_Corps_Progress_Report_Supplements</fullName>
        <columns>NAME</columns>
        <columns>Organization_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Due_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award_Reporting__c.FGP_FGPF_Progress_Report_Supplement,Award_Reporting__c.Senior_Corps_Progress_Report_Supplements</value>
        </filters>
        <label>Senior Corps Progress Report Supplements</label>
    </listViews>
    <listViews>
        <fullName>VISTA_Progress_Report_Supplements</fullName>
        <columns>NAME</columns>
        <columns>Organization_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award_Reporting__c.VISTA_Progress_Report_Supplements</value>
        </filters>
        <label>VISTA Progress Report Supplements</label>
    </listViews>
    <listViews>
        <fullName>test_Award_Reporting</fullName>
        <filterScope>Queue</filterScope>
        <label>test</label>
        <queue>test</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Award Reporting-{000}</displayFormat>
        <label>Award Reporting Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Award Reporting</pluralLabel>
    <recordTypes>
        <fullName>Equipment_Inventory</fullName>
        <active>true</active>
        <description>Equipment Inventory</description>
        <label>Equipment Inventory</label>
    </recordTypes>
    <recordTypes>
        <fullName>FGP_FGPF_Progress_Report_Supplement</fullName>
        <active>true</active>
        <description>Senior Corps Foster Grandparents Program</description>
        <label>FGP/FGPF Progress Report Supplement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Federal_Financial_Reports</fullName>
        <active>true</active>
        <description>Federal Financial Reporting</description>
        <label>Federal Financial Reports</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inventory_of_Unused_or_Residual_Supplies</fullName>
        <active>true</active>
        <description>Inventory of Unused or Residual Supplies</description>
        <label>Inventory of Unused or Residual Supplies</label>
    </recordTypes>
    <recordTypes>
        <fullName>Progress_Reports</fullName>
        <active>true</active>
        <description>Progress Reports</description>
        <label>Progress Reports</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSVP_Progress_Report_Supplement</fullName>
        <active>true</active>
        <description>Senior Corps Retired and Senior Volunteer Program</description>
        <label>RSVP Progress Report Supplement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Senior_Corps_Progress_Report_Supplements</fullName>
        <active>true</active>
        <description>Senior Corps Senior Companions</description>
        <label>SCP/SCPF Progress Report Supplement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subgrantee_Certification</fullName>
        <active>true</active>
        <description>Subgrantee Certification</description>
        <label>Subgrantee Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>VISTA_Progress_Report_Supplements</fullName>
        <active>true</active>
        <description>VISTA Progress Report Supplements</description>
        <label>VISTA Progress Report Supplements</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Close_Out_Certification_Complete</fullName>
        <active>false</active>
        <errorConditionFormula>IF(RecordType.DeveloperName == &apos;Subgrantee Certification&apos; &amp;&amp; Close_Out_Certification_Complete__c != True, True, False)</errorConditionFormula>
        <errorMessage>Close Out Certification Complete is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_Other_Issues</fullName>
        <active>true</active>
        <description>Fired when &quot;Drawdowns within 20% of reported OBG&quot; is NO, to prompt user to add comments.</description>
        <errorConditionFormula>IF(Drawdown_Amount__c&gt;(0.2*Reported_Obligations__c)&amp;&amp; Other_issues__c = NULL,True,False)</errorConditionFormula>
        <errorDisplayField>Other_issues__c</errorDisplayField>
        <errorMessage>Since &quot;Drawdowns&quot; are not within 20%, comments will need to be entered into the &quot;other issues&quot; text box.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expenditure_Comments</fullName>
        <active>true</active>
        <errorConditionFormula>IF((ISPICKVAL(Unobligated_funds__c,&apos;Low&apos;)||ISPICKVAL(Unobligated_funds__c,&apos;High&apos;))&amp;&amp;ISBLANK(Expenditure_Comments__c),True,false)</errorConditionFormula>
        <errorDisplayField>Expenditure_Comments__c</errorDisplayField>
        <errorMessage>Enter &quot;Expenditures Comments&quot; as Unobligated funds are not on Target.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Federal_funds</fullName>
        <active>true</active>
        <description>As per #870</description>
        <errorConditionFormula>if((( of_funds_expended_to_date__c -  of_funds_expended_to_date_Federal__c ) != ( Federal_Share_of_expenditures__c / Total_Federal_Funds_authorized__c )), true, false)</errorConditionFormula>
        <errorMessage>% of Funds Expended to Date minus Federal Share must equal federal share of expenditures divided by total federal funds authorized</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grantee_funds</fullName>
        <active>true</active>
        <description>As per #870</description>
        <errorConditionFormula>if(((  of_funds_expended_to_date_Federal__c -   of_funds_expended_to_date__c ) != (  Recipient_share_of_expenditures__c /  Total_Recipient_share_required__c )), true, false)</errorConditionFormula>
        <errorMessage>% of Funds expended to date minus grantee share must equal recipient share of expenditures divided by total recipient share required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_the_record</fullName>
        <active>true</active>
        <description>Lock the record when the status is submitted</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c,&apos;Submitted&apos;),
 $Profile.Name = &apos;Applicant&apos;)</errorConditionFormula>
        <errorMessage>You cannot edit the record because the status is submitted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Match_Comments</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Match__c,&apos;Low&apos;)&amp;&amp;ISBLANK(Match_Comments__c),True,false)</errorConditionFormula>
        <errorDisplayField>Match_Comments__c</errorDisplayField>
        <errorMessage>Enter Comments as Match is &quot;Low&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reporting_Periods_for_grant_officer</fullName>
        <active>false</active>
        <errorConditionFormula>IF(($Profile.Name =&apos;Grants officer&apos; &amp;&amp; ISPICKVAL(Status__c,&apos;Submitted&apos;)),if(  ISCHANGED(Reporting_Periods__c),true,false),false)</errorConditionFormula>
        <errorMessage>You cannot edit Reporting Period field because the status is submitted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resubmission_Due_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Status__c,&apos;Returned for Re-work&apos;)&amp;&amp;ISNULL(Resubmission_Due_Date__c),True,False)</errorConditionFormula>
        <errorDisplayField>Resubmission_Due_Date__c</errorDisplayField>
        <errorMessage>Enter Resubmission Due Date</errorMessage>
    </validationRules>
</CustomObject>